# ccme-dispenser

./: .compile_and_install.sh.swp  .gitignore  .gitmodules  CMakeLists.txt  compile_and_install.sh
cmake/: aarch64-toolchain.cmake
dbus/: org.ccme.conf
docs/: camera.md  compile.md  fmc.md  ika.md  main.md  motor.md
frontend/: app.js  index.html  style.css
include/camera/: dissolution_detector.h
include/fmc/: fmc_controller.h
include/orchestrator/: workflow.h
include/pump/: pump_controller.h
include/stirrer/: stirrer_controller.h
include/web/: http_server.h
nginx/: nginx.conf
scripts/: build-libsystemd.sh  cross-configure.sh  gstreamer-stream.sh  ika_control2.sh  libsystemd.pc  setup-ssl.sh  start-ip.sh  start_services.sh  stub-libsystemd.c
skills/: git.md
src/camera/: CMakeLists.txt  dissolution_detector.cpp  main.cpp
src/fmc/: CMakeLists.txt  fmc_controller.cpp  main.cpp
src/orchestrator/: CMakeLists.txt  main.cpp  workflow.cpp
src/pump/: CMakeLists.txt  main.cpp  pump_controller.cpp
src/stirrer/: CMakeLists.txt  main.cpp  stirrer_controller.cpp
src/web/: CMakeLists.txt  http_server.cpp  main.cpp
